--- a/style.css
+++ b/style.css
@@ -106,3 +106,10 @@ ul{
     block-size: auto 
     
 }
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    font-size: 70%;
+  }
